<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_layout_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >

    <ImageView
        android:id="@+id/ivWarning"

        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/warning" />

    <TextView
        android:id="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/warning_title" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/warning_message"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivWarning"
        android:layout_centerHorizontal="true"
        android:text="@string/ok"
        />


</RelativeLayout>