<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AddProfileFragment"

    android:id="@+id/fg_add_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

<!--        <ImageButton-->
<!--            android:id="@+id/addUserImage"-->
<!--            android:layout_width="158dp"-->
<!--            android:layout_height="167dp"-->
<!--            android:background="@drawable/add_user_black"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/addUserImage"
            android:layout_width="158dp"
            android:layout_height="167dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/orange_dark"
            android:background="@color/background"
            android:src="@drawable/add_user_black" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addUserImage">

            <LinearLayout
                android:id="@+id/profile_name_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/profile_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:text="@string/profile_name"
                    android:textSize="15sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/backArrow" />

                <EditText
                    android:id="@+id/edit_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textColor="@color/text_color"
                    tools:layout_editor_absoluteX="38dp"
                    tools:layout_editor_absoluteY="347dp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/sex_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/firstChatMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:text="@string/sex"
                    android:textSize="15sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/backArrow" />

                <ImageButton
                    android:id="@+id/female"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="60dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/female" />

                <ImageButton
                    android:id="@+id/male"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="60dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/male" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/birth_date_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/birth_date_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:text="@string/birth_date"
                    android:textSize="15sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/backArrow" />

                <Button
                    android:id="@+id/dateEditTextFragmentAddProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/yyyy_mm_dd"
                    android:textColor="@color/text_color"
                    android:focusable="true" />

            </LinearLayout>

        </LinearLayout>

<!--        TODO: zmieniac tekst buttonu w zaleznosci czy zmiana usera czy nie (binding najlepiej) -->
        <Button
            android:id="@+id/fgAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/add"
            android:textColor="@color/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </LinearLayout>

</FrameLayout>